# dutt-lab-utils

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
scripts/: quick_test_ollama.py  test_gemini_flash.py  test_provider_keys.py
src/pdf/: __init__.py
src/pittqlab_utils/: __init__.py  canvas.py  scoring.py  studio_bridge.py
src/pittqlab_utils/llm/: __init__.py  ollama.py  pittai.py  portkey.py  protocol.py  router.py
src/pittqlab_utils/pdf/: reader.py
src/pittqlab_utils/tools/: __init__.py  calendar_tool.py  gmail_tool.py  google_auth.py  intent_log.py  ms_auth.py  ms_calendar_tool.py  outlook_tool.py  voice_response.py
tests/: test_canvas.py  test_pittai.py  test_reader.py  test_scoring.py
tests/llm/: __init__.py  test_ollama.py  test_router.py
tests/tools/: __init__.py  test_calendar_tool.py  test_gmail_tool.py  test_google_auth.py  test_intent_log.py  test_ms_auth.py  test_outlook_tool.py  test_voice_response.py
