[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dutt-lab-utils"
version = "0.1.0"
description = "Shared utilities for Dutt Lab projects"
requires-python = ">=3.9"
dependencies = [
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",        # tesseract needs this for image handling
    "requests>=2.28.0",      # Pitt AI Connect client (pittai.py)
    "httpx>=0.27",           # async LLM backends (ollama)
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "gTTS>=2.3",
    "python-dotenv>=1.0",  # load_dotenv() in scripts/examples; library code does not call it
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
llm = ["httpx>=0.27"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
